# core-dump-handler

./: README.md
charts/core-dump-handler/: README.md  values.azure.yaml  values.schema.json  values.yaml
charts/core-dump-handler/templates/: daemonset.yaml  secrets.yaml
core-dump-agent/: Cargo.toml
core-dump-agent/src/: main.rs
core-dump-composer/src/: events.rs  main.rs
